--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <input type="text" id="input-field" placeholder="Bread">
-    <button id="add-button">Add to cart</button>
+    <div class="container">
+        <img src="./images/shopping-logo.svg"> 
+        <input type="text" id="input-field" placeholder="Bread">
+        <button id="add-button">Add to cart</button>
+    </div>
+
     <script src="/index.js"></script>
 </body>
 </html>
