--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 </head>
 <body>
     <div class="container">
-        <img src="./images/shopping-logo.svg"> 
+        <img src="./images/add-to-cart-logo.png"> 
         <input type="text" id="input-field" placeholder="Bread">
         <button id="add-button">Add to cart</button>
     </div>
 
-    <script src="/index.js"></script>
+    <script src="function.js" type="module"></script>
+    <script src="/index.js" type="module"></script>
 </body>
 </html>
