debugged array appending to li element when a new item is added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <img src="./images/add-to-cart-logo.png"> 
         <input type="text" id="input-field" placeholder="Bread">
         <button id="add-button">Add to cart</button>
+        <ul id="shopping-list"></ul>
     </div>
 
     <script src="function.js" type="module"></script>
